--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "framer-motion": "^12.4.7",
+    "livekit-client": "^2.13.5",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-pageflip": "^2.0.3",
-    "universal-cookie": "^6.1.1"
+    "universal-cookie": "^6.1.3"
   },
   "devDependencies": {
     "@types/node": "^20",
