--- a/package.json
+++ b/package.json
@@ -13,24 +13,18 @@
     "@livekit/components-styles": "^1.1.6",
     "firebase-admin": "^13.4.0",
     "framer-motion": "^12.4.7",
-<<<<<<< Updated upstream
-=======
     "livekit-client": "^2.13.8",
     "livekit-server-sdk": "^2.13.0",
->>>>>>> Stashed changes
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
+    "pg-sdk-node": "https://phonepe.mycloudrepo.io/public/repositories/phonepe-pg-sdk-node/releases/v2/phonepe-pg-sdk-node.tgz",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-<<<<<<< Updated upstream
-    "react-pageflip": "^2.0.3"
-=======
     "react-pageflip": "^2.0.3",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "universal-cookie": "^6.1.3"
->>>>>>> Stashed changes
   },
   "devDependencies": {
     "@types/node": "^20",
