--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@livekit/components-react": "^2.9.10",
+    "@heroicons/react": "^2.2.0",
+    "@livekit/components-react": "^2.9.14",
     "@livekit/components-styles": "^1.1.6",
     "firebase-admin": "^13.4.0",
     "framer-motion": "^12.23.0",
     "livekit-client": "^2.13.8",
-    "livekit-server-sdk": "^2.13.0",
+    "livekit-server-sdk": "^2.13.1",
     "lucide-react": "^0.525.0",
     "next": "15.1.7",
     "pg-sdk-node": "https://phonepe.mycloudrepo.io/public/repositories/phonepe-pg-sdk-node/releases/v2/phonepe-pg-sdk-node.tgz",
