--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@livekit/components-react": "^2.9.14",
     "@livekit/components-styles": "^1.1.6",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@types/nodemailer": "^7.0.1",
     "firebase-admin": "^13.4.0",
     "framer-motion": "^12.23.0",
     "livekit-client": "^2.13.8",
@@ -20,6 +21,7 @@
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.525.0",
     "next": "15.1.7",
+    "nodemailer": "^7.0.6",
     "pg-sdk-node": "https://phonepe.mycloudrepo.io/public/repositories/phonepe-pg-sdk-node/releases/v2/phonepe-pg-sdk-node.tgz",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
