--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "livekit-server-sdk": "^2.13.1",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.525.0",
-    "next": "15.1.7",
+    "next": "^15.1.11",
     "nodemailer": "^7.0.6",
     "pg-sdk-node": "https://phonepe.mycloudrepo.io/public/repositories/phonepe-pg-sdk-node/releases/v2/phonepe-pg-sdk-node.tgz",
     "react": "^19.0.0",
